# dtmpfs

./: CLAUDE.md  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
config/: client.toml  meta.toml  store.toml
crates/dtmpfs-client/: CLAUDE.md  Cargo.toml
crates/dtmpfs-client/src/: cache.rs  client.rs  flush.rs  fs.rs  main.rs  open_file.rs
crates/dtmpfs-common/: CLAUDE.md  Cargo.toml
crates/dtmpfs-common/src/: config.rs  error.rs  hash.rs  id.rs  lib.rs
crates/dtmpfs-meta/: CLAUDE.md  Cargo.toml
crates/dtmpfs-meta/src/: auth.rs  debug.rs  main.rs  service.rs  state.rs
crates/dtmpfs-proto/: CLAUDE.md  Cargo.toml  build.rs
crates/dtmpfs-proto/src/: lib.rs
crates/dtmpfs-store/: CLAUDE.md  Cargo.toml
crates/dtmpfs-store/src/: debug.rs  heartbeat.rs  main.rs  service.rs  state.rs
docs/: HLD.md  LLD.md  acceptance-tests.md  architecture.md  configuration.md  consistency.md  decisions.md  failure-model.md  operations.md  protocol.md  testing.md
docs/_audit/: config-audit.md  consistency-audit.md  failure-audit.md  protocol-audit.md  test-coverage-audit.md
proto/: meta.proto  store.proto
scripts/: spawn-agents.sh
