[workspace]
resolver = "2"
members = [
    "crates/dtmpfs-proto",
    "crates/dtmpfs-common",
    "crates/dtmpfs-meta",
    "crates/dtmpfs-store",
    "crates/dtmpfs-client",
]

[workspace.package]
version      = "0.1.0"
edition      = "2021"
rust-version = "1.94"
license      = "Apache-2.0"
repository   = "https://github.com/kathir-ks/dtmpfs"

[workspace.dependencies]
tonic              = { version = "0.12", features = ["transport"] }
tonic-build        = { version = "0.12" }
prost              = { version = "0.13" }
prost-types        = { version = "0.13" }
tokio              = { version = "1", features = ["full"] }
tokio-stream       = { version = "0.1" }
futures            = { version = "0.3" }
bytes              = { version = "1" }
dashmap            = { version = "6" }
moka               = { version = "0.12", features = ["sync"] }
arc-swap           = { version = "1" }
serde              = { version = "1", features = ["derive"] }
toml               = { version = "0.8" }
bincode            = { version = "1.3" }
thiserror          = { version = "1" }
anyhow             = { version = "1" }
tracing            = { version = "0.1" }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
clap               = { version = "4", features = ["derive"] }
fuser              = { version = "0.14" }
libc               = { version = "0.2" }
xxhash-rust        = { version = "0.8", features = ["xxh3"] }
hyper              = { version = "1" }
axum               = { version = "0.7" }
rand               = { version = "0.8" }
subtle             = { version = "2" }
serde_json         = { version = "1" }
