[package]
name = "dtmpfs-client"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dtmpfs-mount"
path = "src/main.rs"

[dependencies]
dtmpfs-proto       = { path = "../dtmpfs-proto" }
dtmpfs-common      = { path = "../dtmpfs-common" }
tonic              = { workspace = true }
prost              = { workspace = true }
tokio              = { workspace = true }
tokio-stream       = { workspace = true }
futures            = { workspace = true }
bytes              = { workspace = true }
dashmap            = { workspace = true }
moka               = { workspace = true }
arc-swap           = { workspace = true }
fuser              = { workspace = true }
libc               = { workspace = true }
serde              = { workspace = true }
toml               = { workspace = true }
thiserror          = { workspace = true }
anyhow             = { workspace = true }
tracing            = { workspace = true }
tracing-subscriber = { workspace = true }
clap               = { workspace = true }
subtle             = { workspace = true }
