[package]
name = "dtmpfs-common"
version.workspace = true
edition.workspace = true

[dependencies]
serde       = { workspace = true }
toml        = { workspace = true }
thiserror   = { workspace = true }
anyhow      = { workspace = true }
bytes       = { workspace = true }
xxhash-rust = { workspace = true }
libc        = { workspace = true }
tonic       = { workspace = true }
tracing     = { workspace = true }
